...
        button.addTarget(self, action: #selector(self.addImageButtonClicked), for: .touchUpInside)
        view.layout(button).width(48).height(48).above(self.postButton, 8).trailing(self.postButton)

        self.postButton.pulseColor = .white
        self.postButton.titleColor = .white
        self.postButton.backgroundColor = .purple
        self.postButton.title = self.presenter.isEditing() ? "Edit" : "Post"
    }

    @IBAction func cancelButtonHandler(_ sender: Button) {
        self.presenter.cancelButtonClicked()
    }

...
